--- a/package.yaml
+++ b/package.yaml
@@ -31,7 +31,9 @@ tested-with:
   GHC == 8.0.1,
   GHC == 9.4.4,
   GHC == 9.6.2,
-  GHC == 9.8.1
+  GHC == 9.8.1,
+  GHC == 9.8.2
+
 
 library:
   source-dirs: src
